--- a/AutosWorld/Views/Category/Index.cshtml
+++ b/AutosWorld/Views/Category/Index.cshtml
@@ -4,7 +4,16 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index category page</h1>
+<div class="container p-3">
+    <div class="row pt-4">
+        <div class="col-6">
+            <h2 class="text-primary">Category List</h2>
+        </div>
+        <div class="col-6 text-end">
+            <a class="btn btn-primary" asp-controller="Category" asp-action="Create"><i class="bi bi-plus-circle"></i> &nbsp; Create new category</a>
+        </div>
+    </div>
+</div>
 
 <table class="table table-bordered table-striped" style="width:100%">
     <thead>
@@ -13,6 +22,7 @@
             <th>Category Name</th>
             <th>Display Order</th>
             <th>Date</th>
+            <th>Action</th>
         </tr>
     </thead>
     <tbody>
@@ -23,6 +33,12 @@
                 <td>@cat.Name</td>
                 <td>@cat.DisplayOrder</td>
                 <td>@cat.CreatedDateTime</td>
+                <td> 
+                    <div class="w-75 btn-group" role="group">
+                    <a asp-controller="Category" asp-action="Edit" asp-route-id="@cat.Id" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i> Edit</a>
+                      <a asp-controller="Category" asp-action="Delete" asp-route-id="@cat.Id" class="btn btn-danger mx-2"><i class="bi bi-trash-fill"></i> Edit</a>
+                    </div>
+                </td>
             </tr>
         }
     </tbody>
