--- a/AutosWorld/Views/Category/Index.cshtml
+++ b/AutosWorld/Views/Category/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Index";
 }
+<partial name="_Notification"/>
 
 <div class="container p-3">
     <div class="row pt-4">
@@ -36,7 +37,7 @@
                 <td> 
                     <div class="w-75 btn-group" role="group">
                     <a asp-controller="Category" asp-action="Edit" asp-route-id="@cat.Id" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i> Edit</a>
-                      <a asp-controller="Category" asp-action="Delete" asp-route-id="@cat.Id" class="btn btn-danger mx-2"><i class="bi bi-trash-fill"></i> Edit</a>
+                      <a asp-controller="Category" asp-action="Delete" asp-route-id="@cat.Id" class="btn btn-danger mx-2"><i class="bi bi-trash-fill"></i> Delete</a>
                     </div>
                 </td>
             </tr>
