--- a/AutosWorld/Views/Shared/_Layout.cshtml
+++ b/AutosWorld/Views/Shared/_Layout.cshtml
@@ -22,12 +22,12 @@
     <div class="collapse navbar-collapse" id="navbarColor02">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" asp-area="" asp-controller="Home" asp-action="Index">Home
+          <a class="nav-link active" asp-area="Customer" asp-controller="Home" asp-action="Index">Home
             
           </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-light" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
+            <a class="nav-link text-light" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
         </li>
        
        @* <li class="nav-item dropdown">
