--- a/AutosWorld/Views/Shared/_Layout.cshtml
+++ b/AutosWorld/Views/Shared/_Layout.cshtml
@@ -26,20 +26,16 @@
             
           </a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link text-light" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
-        </li>
        
-       @* <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+       
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">CMS</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
+           <a class="dropdown-item text-light" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+             <a class="dropdown-item text-light" asp-area="Admin" asp-controller="CoverType" asp-action="Index">Cover Type</a>
+           
           </div>
-        </li>*@
+        </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-sm-2" type="text" placeholder="Search">
@@ -58,7 +54,7 @@
 
     <footer class="footer text-muted bg-dark">
         <div class="container">
-            &copy; 2022 - AutosWorld - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - AutosWorld - <a asp-area="Customer" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
