--- a/AutosWorld/wwwroot/css/bootswatch.css
+++ b/AutosWorld/wwwroot/css/bootswatch.css
@@ -55,7 +55,7 @@
     --bs-white-rgb: 255, 255, 255;
     --bs-black-rgb: 0, 0, 0;
     --bs-body-color-rgb: 131, 148, 150;
-    --bs-body-bg-rgb: 0, 43, 54;
+    --bs-body-bg-rgb: 0, 0, 0;
     --bs-font-sans-serif: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
@@ -64,7 +64,7 @@
     --bs-body-font-weight: 400;
     --bs-body-line-height: 1.5;
     --bs-body-color: #839496;
-    --bs-body-bg: #002b36;
+    --bs-body-bg: #fff;
 }
 
 *,
