--- a/AutosWorld/Views/Shared/_Layout.cshtml
+++ b/AutosWorld/Views/Shared/_Layout.cshtml
@@ -32,7 +32,8 @@
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">CMS</a>
           <div class="dropdown-menu">
            <a class="dropdown-item text-light" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
-             <a class="dropdown-item text-light" asp-area="Admin" asp-controller="CoverType" asp-action="Index">Cover Type</a>
+        <a class="dropdown-item text-light" asp-area="Admin" asp-controller="CoverType" asp-action="Index">Cover Type</a>
+        <a class="dropdown-item text-light" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
            
           </div>
         </li>
