--- a/AutosWorld/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/AutosWorld/Areas/Admin/Views/Product/Upsert.cshtml
@@ -1,4 +1,4 @@
-﻿@model Product
+﻿@model ProductViewModel
 @{
     ViewData["Title"] = "Create";
 }
@@ -16,54 +16,54 @@
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <div class="mb-3">
-            <label asp-for="Name"></label>
-            <input class="form-control" asp-for="Name"/>
-            <span asp-validation-for="Name" class="text-danger"></span>
+            <label asp-for="Product.Name"></label>
+            <input class="form-control" asp-for="Product.Name"/>
+            <span asp-validation-for="Product.Name" class="text-danger"></span>
             </div>
         
         <div class="mb-3">
-            <label asp-for="Model"></label>
-            <input class="form-control" asp-for="Model"/>
-            <span asp-validation-for="Model" class="text-danger"></span>
+            <label asp-for="Product.Model"></label>
+            <input class="form-control" asp-for="Product.Model"/>
+            <span asp-validation-for="Product.Model" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
-            <label asp-for="Year"></label>
-            <input class="form-control" asp-for="Year"/>
-            <span asp-validation-for="Year" class="text-danger"></span>
+            <label asp-for="Product.Year"></label>
+            <input class="form-control" asp-for="Product.Year"/>
+            <span asp-validation-for="Product.Year" class="text-danger"></span>
         </div> 
         <div class="mb-3">
-            <label asp-for="Price"></label>
-            <input class="form-control" asp-for="Price"/>
-            <span asp-validation-for="Price" class="text-danger"></span>
+            <label asp-for="Product.Price"></label>
+            <input class="form-control" asp-for="Product.Price"/>
+            <span asp-validation-for="Product.Price" class="text-danger"></span>
         </div>
 
          <div class="mb-3">
-            <label asp-for="ListPrice"></label>
-            <input class="form-control" asp-for="ListPrice"/>
-            <span asp-validation-for="ListPrice" class="text-danger"></span>
+            <label asp-for="Product.ListPrice"></label>
+            <input class="form-control" asp-for="Product.ListPrice"/>
+            <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
-            <label asp-for="CategoryId"></label>
-            <select asp-for="CategoryId" asp-items="ViewBag.CategoryList" class="form-select">
+            <label asp-for="Product.CategoryId"></label>
+            <select asp-for="Product.CategoryId" asp-items="@Model.CategoryList" class="form-select">
                 <option disabled selected>--Select Category--</option>
             </select>
-            <span asp-validation-for="CategoryId" class="text-danger"></span>
+            <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
-            <label asp-for="CoverTypeId"></label>
-            <select asp-for="CoverTypeId" asp-items="ViewBag.CoverTypeList" class="form-select">
+            <label asp-for="Product.CoverTypeId"></label>
+            <select asp-for="Product.CoverTypeId" asp-items="@Model.CoverTypeList" class="form-select">
                 <option disabled selected>--Select Cover Type--</option>
             </select>
-            <span asp-validation-for="CoverTypeId" class="text-danger"></span>
+            <span asp-validation-for="Product.CoverTypeId" class="text-danger"></span>
         </div>
 
          <div class="mb-3">
-            <label asp-for="Description"></label>
-            <textarea class="form-control" asp-for="Description" rows="4"></textarea>
-            <span asp-validation-for="Description" class="text-danger"></span>
+            <label asp-for="Product.Description"></label>
+            <textarea class="form-control" asp-for="Product.Description" rows="4"></textarea>
+            <span asp-validation-for="Product.Description" class="text-danger"></span>
         </div>
         
         <button class="btn btn-primary" type="submit" style="width:150px">Save</button>
