--- a/AutosWorld/Areas/Admin/Views/_ViewImports.cshtml
+++ b/AutosWorld/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using AutosWorld
 @using AutosCenter.Models
+@using AutosCenter.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
