--- a/AutosWorld/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/AutosWorld/Areas/Admin/Views/Product/Upsert.cshtml
@@ -6,7 +6,7 @@
 <form method="post" asp-action="Upsert">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary text-center">Create Product</h2>
+            <h2 class="text-primary text-center">  Create Product</h2>
             <hr/>
         </div>
 
@@ -60,13 +60,26 @@
             <span asp-validation-for="Product.CoverTypeId" class="text-danger"></span>
         </div>
 
+        <div class="mb-3">
+            <label asp-for="Product.ImageUrl"></label>
+            <input type="file" class="form-control" id="imageUrl" asp-for="Product.ImageUrl" />
+            <span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
+        </div>
+
          <div class="mb-3">
             <label asp-for="Product.Description"></label>
             <textarea class="form-control" asp-for="Product.Description" rows="4"></textarea>
             <span asp-validation-for="Product.Description" class="text-danger"></span>
         </div>
-        
-        <button class="btn btn-primary" type="submit" style="width:150px">Save</button>
+            @if(Model.Product.Id != 0)
+            {
+
+            <button class="btn btn-primary" type="submit" style="width:150px">Update</button>
+            }
+            else
+            {
+                    <button class="btn btn-primary" type="submit" onclick="return ValidateInput()" style="width:150px">Create</button>
+            }
         <a asp-controller="Product" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to list</a>
             </div>
             <div class="col-lg-3">
@@ -80,7 +93,22 @@
 
 @section Scripts{
     @{
-        <partial name="_ValidationScriptsPartial"/>
+    <partial name="_ValidationScriptsPartial"/>
     }
+
+    <script>
+        function ValidateInput(){
+            if (document.getElementById("imageUrl").value == "") {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: 'Please upload an image!',
+
+                });
+                return false;
+            }
+            return true;
+        }
+    </script>
 }
 
