--- a/AutosWorld/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/AutosWorld/Areas/Admin/Views/Product/Upsert.cshtml
@@ -62,7 +62,7 @@
 
         <div class="mb-3">
             <label asp-for="Product.ImageUrl"></label>
-            <input type="file" class="form-control" id="imageUrl" asp-for="Product.ImageUrl" />
+            <input type="file" class="form-control" id="imageUrl" name="file" asp-for="Product.ImageUrl" />
             <span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
         </div>
 
