Get all products

--- a/AutosWorld/Areas/Admin/Views/Product/Index.cshtml
+++ b/AutosWorld/Areas/Admin/Views/Product/Index.cshtml
@@ -12,20 +12,26 @@
     </div>
 </div>
 
-<table class="table table-bordered table-striped" style="width:100%">
+<table class="table table-bordered table-striped" style="width:100%" id="tblData">
     <thead>
         <tr>
             <th>S/N</th>
             <th>Name</th>
-            <th>Description</th>
             <th>Model</th>
             <th>Year</th>
             <th>Price</th>
             <th>Description</th>
             <th>Category</th>
+            <th>Cover Type</th>
+            <th>Actions</th>
+            
             
         </tr>
     </thead>
     
 
 </table>
+
+@section Scripts{
+    <script src="~/js/product.js"></script>
+}
