--- a/AutosWorld/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/AutosWorld/Areas/Admin/Views/Product/Upsert.cshtml
@@ -3,10 +3,10 @@
     ViewData["Title"] = "Create";
 }
 
-<form method="post" asp-action="Upsert">
+<form method="post" asp-action="Upsert" enctype="multipart/form-data">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary text-center">  Create Product</h2>
+            <h2 class="text-primary text-center">Create Product</h2>
             <hr/>
         </div>
 
@@ -25,6 +25,12 @@
             <label asp-for="Product.Model"></label>
             <input class="form-control" asp-for="Product.Model"/>
             <span asp-validation-for="Product.Model" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="Product.Manufacturer"></label>
+            <input class="form-control" asp-for="Product.Manufacturer"/>
+            <span asp-validation-for="Product.Manufacturer" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
