--- a/AutosWorld/Areas/Admin/Views/Product/Index.cshtml
+++ b/AutosWorld/Areas/Admin/Views/Product/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿
 <partial name="_Notification"/>
 
+@{
+    ViewData["Title"] = "Product Home";
+}
+
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
