--- a/AutosWorld/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/AutosWorld/Areas/Admin/Views/Product/Upsert.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProductViewModel
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Product";
 }
 
 <form method="post" asp-action="Upsert" enctype="multipart/form-data">
@@ -16,77 +16,85 @@
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <div class="mb-3">
-            <label asp-for="Product.Name"></label>
-            <input class="form-control" asp-for="Product.Name"/>
-            <span asp-validation-for="Product.Name" class="text-danger"></span>
-            </div>
+                    <label asp-for="Product.Id" hidden></label>
+                    <input type="hidden" asp-for="Product.Id"/>             
+                </div>
+                <div class="mb-3">
+                    <label asp-for="Product.ImageUrl" hidden></label>
+                    <input type="hidden" asp-for="Product.ImageUrl"/>             
+                </div>
+                <div class="mb-3">
+                    <label asp-for="Product.Name"></label>
+                    <input class="form-control" asp-for="Product.Name"/>
+                    <span asp-validation-for="Product.Name" class="text-danger"></span>
+                </div>
         
-        <div class="mb-3">
-            <label asp-for="Product.Model"></label>
-            <input class="form-control" asp-for="Product.Model"/>
-            <span asp-validation-for="Product.Model" class="text-danger"></span>
-        </div>
+                <div class="mb-3">
+                    <label asp-for="Product.Model"></label>
+                    <input class="form-control" asp-for="Product.Model"/>
+                    <span asp-validation-for="Product.Model" class="text-danger"></span>
+                </div>
 
-        <div class="mb-3">
-            <label asp-for="Product.Manufacturer"></label>
-            <input class="form-control" asp-for="Product.Manufacturer"/>
-            <span asp-validation-for="Product.Manufacturer" class="text-danger"></span>
-        </div>
+                <div class="mb-3">
+                    <label asp-for="Product.Manufacturer"></label>
+                    <input class="form-control" asp-for="Product.Manufacturer"/>
+                    <span asp-validation-for="Product.Manufacturer" class="text-danger"></span>
+                </div>
 
-        <div class="mb-3">
-            <label asp-for="Product.Year"></label>
-            <input class="form-control" asp-for="Product.Year"/>
-            <span asp-validation-for="Product.Year" class="text-danger"></span>
-        </div> 
-        <div class="mb-3">
-            <label asp-for="Product.Price"></label>
-            <input class="form-control" asp-for="Product.Price"/>
-            <span asp-validation-for="Product.Price" class="text-danger"></span>
-        </div>
+                <div class="mb-3">
+                    <label asp-for="Product.Year"></label>
+                    <input class="form-control" asp-for="Product.Year"/>
+                    <span asp-validation-for="Product.Year" class="text-danger"></span>
+                </div> 
+                <div class="mb-3">
+                    <label asp-for="Product.Price"></label>
+                    <input class="form-control" asp-for="Product.Price"/>
+                    <span asp-validation-for="Product.Price" class="text-danger"></span>
+                </div>
 
-         <div class="mb-3">
-            <label asp-for="Product.ListPrice"></label>
-            <input class="form-control" asp-for="Product.ListPrice"/>
-            <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
-        </div>
+                    <div class="mb-3">
+                    <label asp-for="Product.ListPrice"></label>
+                    <input class="form-control" asp-for="Product.ListPrice"/>
+                    <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
+                </div>
 
-        <div class="mb-3">
-            <label asp-for="Product.CategoryId"></label>
-            <select asp-for="Product.CategoryId" asp-items="@Model.CategoryList" class="form-select">
-                <option disabled selected>--Select Category--</option>
-            </select>
-            <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
-        </div>
+                <div class="mb-3">
+                    <label asp-for="Product.CategoryId"></label>
+                    <select asp-for="Product.CategoryId" asp-items="@Model.CategoryList" class="form-select">
+                        <option disabled selected>--Select Category--</option>
+                    </select>
+                    <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
+                </div>
 
-        <div class="mb-3">
-            <label asp-for="Product.CoverTypeId"></label>
-            <select asp-for="Product.CoverTypeId" asp-items="@Model.CoverTypeList" class="form-select">
-                <option disabled selected>--Select Cover Type--</option>
-            </select>
-            <span asp-validation-for="Product.CoverTypeId" class="text-danger"></span>
-        </div>
+                <div class="mb-3">
+                    <label asp-for="Product.CoverTypeId"></label>
+                    <select asp-for="Product.CoverTypeId" asp-items="@Model.CoverTypeList" class="form-select">
+                        <option disabled selected>--Select Cover Type--</option>
+                    </select>
+                    <span asp-validation-for="Product.CoverTypeId" class="text-danger"></span>
+                </div>
 
-        <div class="mb-3">
-            <label asp-for="Product.ImageUrl"></label>
-            <input type="file" class="form-control" id="imageUrl" name="file" asp-for="Product.ImageUrl" />
-            <span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
-        </div>
+                <div class="mb-3">
+                    <label asp-for="Product.ImageUrl"></label>
+                    <input type="file" class="form-control" id="imageUrl" name="file" />
+                    <span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
+                </div>
 
-         <div class="mb-3">
-            <label asp-for="Product.Description"></label>
-            <textarea class="form-control" asp-for="Product.Description" rows="4"></textarea>
-            <span asp-validation-for="Product.Description" class="text-danger"></span>
-        </div>
-            @if(Model.Product.Id != 0)
-            {
+                <div class="mb-3">
+                    <label asp-for="Product.Description"></label>
+                    <textarea class="form-control" asp-for="Product.Description" rows="4"></textarea>
+                    <span asp-validation-for="Product.Description" class="text-danger"></span>
+                </div>
+                    @if(Model.Product.Id != 0)
+                    {
 
-            <button class="btn btn-primary" type="submit" style="width:150px">Update</button>
-            }
-            else
-            {
-                    <button class="btn btn-primary" type="submit" onclick="return ValidateInput()" style="width:150px">Create</button>
-            }
-        <a asp-controller="Product" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to list</a>
+                        <button class="btn btn-primary" type="submit" style="width:150px">Update</button>
+                    }
+                    else
+                    {
+                         <button class="btn btn-primary" type="submit" onclick="return ValidateInput()" style="width:150px">Create</button>
+                    }
+                <a asp-controller="Product" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to list</a>
             </div>
             <div class="col-lg-3">
 
@@ -103,6 +111,16 @@
     }
 
     <script>
+
+        tinymce.init({
+      selector: 'textarea',
+      plugins: 'a11ychecker advcode casechange export formatpainter image editimage linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tableofcontents tinycomments tinymcespellchecker',
+      toolbar: 'a11ycheck addcomment showcomments casechange checklist code export formatpainter image editimage pageembed permanentpen table tableofcontents',
+      toolbar_mode: 'floating',
+      tinycomments_mode: 'embedded',
+      tinycomments_author: 'Author name',
+    });
+
         function ValidateInput(){
             if (document.getElementById("imageUrl").value == "") {
                 Swal.fire({
