--- a/AutosWorld/Views/Shared/_Layout.cshtml
+++ b/AutosWorld/Views/Shared/_Layout.cshtml
@@ -64,6 +64,8 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+     <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+     <script src="https://cdn.tiny.cloud/1/runjjwm3vvwkjuusowtni2r6czsh9dhh45rpf8myfq07n9an/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
