successfully created user registration

--- a/AutosWorld/Areas/Admin/Views/Company/Index.cshtml
+++ b/AutosWorld/Areas/Admin/Views/Company/Index.cshtml
@@ -20,12 +20,12 @@
         <tr>
             <th>S/N</th>
             <th>Name</th>
-            <th>StreetAddress</th>
+            <th>Street Address</th>
             <th>City</th>
             <th>State</th>
-            <th>PostalCode</th>
-            <th>PhoneNumber</th>
-   
+            <th>Postal Code</th>
+            <th>Phone Number</th>
+            <th>Actions</th>
         </tr>
     </thead>
     
